Fixed navbar collapse issue

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -8,7 +8,7 @@ footer {
   padding: 20px 0;
 }
 
-#navbar {
+.navbar {
   background-color: #000;
 }
 
